CSS clip: auto clips to box borders instead of removing clipping https://bugs.webkit.org/show_bug.cgi?id=36772

Patch by Uday Kiran <udaykiran@motorola.com> on 2012-05-03
Reviewed by Andreas Kling.

Source/WebCore:

According to CSS 2.1 spec, http://www.w3.org/TR/CSS2/visufx.html#propdef-clip,
clip property with value 'auto' the element does not clip.
Also getPropertyValue for clip when auto is specified should return "auto"
and not "rect(0px 0px 0px 0px)".

Tests: css2.1/20110323/clip-001-expected.html
       css2.1/20110323/clip-001.html

* css/StyleBuilder.cpp:
(WebCore::ApplyPropertyClip::applyValue):

LayoutTests:

CSS 2.1 test case added for clip:auto

* css2.1/20110323/clip-001-expected.html: Added.
* css2.1/20110323/clip-001.html: Added.
* fast/css/getPropertyValue-clip.html: getPropertyValue for clip when auto is specified should return auto and not rect(0px 0px 0px 0px).

git-svn-id: svn://svn.chromium.org/blink/trunk@115953 bbb929c8-8fbe-4397-9dbb-9b2b20218538