third_party/WebKit/Source/WebCore/css/StyleBuilder.cpp
@@ -256,7 +256,7 @@ public:
             styleResolver->style()->setHasClip(true);
         } else if (primitiveValue->getIdent() == CSSValueAuto) {
             styleResolver->style()->setClip(Length(), Length(), Length(), Length());
-            styleResolver->style()->setHasClip(true);
+            styleResolver->style()->setHasClip(false);
         }
     }
 
